Image folder name correction

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Abhishek Gandham</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,11 +11,11 @@
   <body>
 
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
       <h1>I'm Abhishek</h1>
       <h2>im a web designer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+      <img src="Images/mountain.png" alt="mountain-img">
     </div>
       <div class="middle-container">
         <div class="profile">
@@ -27,12 +27,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="skill-image" src="images/programming.png" alt="webdesigning-image">
+            <img class="skill-image" src="Images/programming.png" alt="webdesigning-image">
             <h3>Design & Development</h3>
             <p>A prolific designer and have worked on development of web application projects.</p>
           </div>
           <div class="skill-row">
-            <img class="skill-image" src="images/testing.png" alt="webtesting-image">
+            <img class="skill-image" src="Images/testing.png" alt="webtesting-image">
             <h3>Functional Testing</h3>
             <p>Have fair hands on experience on Selenium and webservices Testing.</p>
           </div>
